@@ -1,1 +1,2 @@
 DIST schedule-5.0.tar.gz 38609 SHA256 69b9b5bb30b7066dd45bcae291bda601f1c49d399ecdc74e2423bfc9c4610a40 SHA512 effabe2f3a3c51d662f75e24c0215faef525387544c0ebd0456fe903039f11380f34bd5e34ff4ca9c0fd634f95b047ebe091a99df537432bfe318307e565ed77 WHIRLPOOL 035fd1d9a5f784748070f5b22215f421592e29c97d8d85feb258d06d068a36842fdc5617889b5376b2e9c2a339cdb6ca083bb89c6debc25896a18a22265d5298
+DIST schedule-5.1.tar.gz 40478 SHA256 59e5e8ac514d8922244ee3bd44ad843bf0062b3b4f5672d4d52e1f3cef6fd32e SHA512 d060511f953cbbba1abd5950f7166d7cce64fdb98275780a17b01f69bb34ca583e61b7d1dc7173c5fdc4e6f2d07086b5e37ae013e23cc3df076547cf46702abe WHIRLPOOL 19f3e1427fa547ffe9ffb31510784d5dd832a45449a40c98ab10e68a93ae2412500ecd7ba5fb66a12b02041d3012ed8c7112836a66c349c13dd03e4206144c83
